2009-06-22  Gordon Williams <gordon.williams@collabora.co.uk>

	Hildon Desktop part of fix for NB#123285 - No window animation for
	                                           SMS Conversation View
	* tests/test-app-launch.c (Added)
	* tests/Makefile.am: Test app to show how to use launch animation                                          
	* src/launcher/hd-launcher.c: Allowed launch anim to work without
	  a service specified.
	* src/mb/hd-comp-mgr.c
	* src/mb/hd-comp-mgr.h: Store the time that the last window was mapped, 
	  and provide hd_comp_mgr_time_since_last_map to access it.	  
	* src/home/hd-render-manager.c
	* src/home/hd-render-manager.h: Provide _allow_dbus_launch_transition
	  (which looks to see if it is likely that a window has been mapped 
	  before its 'launch' dbus message arrives).
	* src/launcher/hd-app-mgr.c: If hd_app_mgr_dbus_launch_app is called
	  without an argument, assume that just the launch transition is
	  required.

	NB#122210 - ROTATION:Screen corruption with horizontal lines
	
	* src/util/hd-util.c: Added call to glFinish to wait until OpenGL
	  has finished drawing before calling randr for screen rotate.

2009-06-22  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator.c (navigator_shown):
	  Flash the scrollbar when entering.

2009-06-22  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Unzoom the background when zooming in in switcher view.

	* src/home/hd-render-manager.h
	* src/home/hd-render-manager.c:
	  Added hd_render_manager_unzoom_background() just for that.
	* src/home/hd-task-navigator.c (hd_task_navigator_zoom_in):
	  Use it.

2009-06-22  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#123736 Window thumbnail shows hidden part of the window

	* src/home/hd-task-navigator.c (create_appthumb):
	  Clip.  Necessary because of the animation actors
	  because they are not regulated by the cmgr.
	* src/mb/hd-comp-mgr.c (dump_clutter_actor_tree):
	  Print the actors anchor point as well.
